export { Empty } from './google/protobuf/empty.js';
export { ContactsServiceClient } from './proto/contacts/v1/contacts.client.js';
export {
  Contact,
  ContactsService,
  CreateContactRequest,
  CreateContactResponse,
  DeleteContactRequest,
  GetContactRequest,
  GetContactResponse,
  ListContactsRequest,
  ListContactsResponse,
  UpdateContactRequest,
  UpdateContactResponse,
} from './proto/contacts/v1/contacts.js';
export { IContactsService } from './proto/contacts/v1/contacts.server.js';
